--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "private": true,
   "dependencies": {
     "@types/node": "12.7.3",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/superagent": "^4.1.3",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
-    "superagent": "^5.1.0",
+    "@types/react": "16.9.25",
+    "@types/react-dom": "16.9.5",
+    "@types/react-router": "^5.1.4",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/sanitize-html": "^1.22.0",
+    "@types/superagent": "^4.1.7",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "sanitize-html": "^1.22.1",
+    "superagent": "^5.2.2",
     "typescript": "3.6.2"
   },
   "scripts": {
@@ -22,6 +28,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "proxy": "https://podcrush.nystad.io",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -35,8 +42,6 @@
     ]
   },
   "devDependencies": {
-    "@now/node": "^1.4.1",
-    "express": "^4.17.1",
-    "request": "^2.88.0"
+    "@now/node": "^1.4.1"
   }
 }
