--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "^3.4.1",
     "sanitize-html": "^1.22.1",
     "superagent": "^5.2.2",
-    "typescript": "3.6.2"
+    "typescript": "3.6.2",
+    "use-ackee": "^0.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
