--- a/package.json
+++ b/package.json
@@ -4,27 +4,24 @@
   "private": true,
   "dependencies": {
     "@types/node": "12.7.3",
-    "@types/react": "16.9.25",
-    "@types/react-dom": "16.9.5",
-    "@types/react-router": "^5.1.4",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/sanitize-html": "^1.22.0",
-    "@types/superagent": "^4.1.7",
-    "node-sass": "^4.13.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
-    "sanitize-html": "^1.22.1",
-    "superagent": "^5.2.2",
-    "typescript": "3.6.2",
-    "use-ackee": "^0.2.0"
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/sanitize-html": "^2.6.2",
+    "@types/superagent": "^4.1.15",
+    "@vitejs/plugin-react": "^1.3.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "sanitize-html": "^2.7.0",
+    "sass": "^1.52.1",
+    "superagent": "^7.1.3",
+    "typescript": "^4.7.2",
+    "vite": "^2.9.9"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build"
   },
   "eslintConfig": {
     "extends": "react-app"
