--- a/package.json
+++ b/package.json
@@ -2,26 +2,36 @@
   "name": "podcrush",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "@types/node": "12.7.3",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/sanitize-html": "^2.6.2",
-    "@types/superagent": "^4.1.15",
-    "@vitejs/plugin-react": "^1.3.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "sanitize-html": "^2.7.0",
-    "sass": "^1.52.1",
-    "superagent": "^7.1.3",
-    "typescript": "^4.7.2",
-    "vite": "^2.9.9"
-  },
   "scripts": {
     "start": "vite",
-    "build": "tsc && vite build"
+    "build": "tsc && vite build",
+    "check": "npm run check:types && npm run check:lint",
+    "check:lint": "eslint --ext .js,.jsx,.ts,.tsx .",
+    "check:types": "tsc --noEmit"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "sanitize-html": "^2.11.0",
+    "superagent": "^8.0.9"
+  },
+  "devDependencies": {
+    "@types/node": "20.4.8",
+    "@types/react": "^18.2.19",
+    "@types/react-dom": "^18.2.7",
+    "@types/sanitize-html": "^2.9.0",
+    "@types/superagent": "^4.1.18",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@vercel/node": "^2.15.8",
+    "@vitejs/plugin-react": "^4.0.4",
+    "eslint": "^8.46.0",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "sass": "^1.64.2",
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -38,8 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@vercel/node": "^1.15.3"
   }
 }
