--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "podcrush",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
